# Modbus_TCP-IP

./: .clang-format  .gitignore  CMakeLists.txt  RAEDME.md
include/: Buffer.hpp  Connection.hpp  ReadBuffer.hpp  WriteBuffer.hpp  error_codes.hpp  functions.hpp
include/modbus/: Master.hpp  Result.hpp
src/: Buffer.cpp  CMakeLists.txt  Connection.cpp  Master.cpp  ReadBuffer.cpp  WriteBuffer.cpp
tests/: CMakeLists.txt  Test.Buffer.cpp  Test.Master.cpp  Test.WriteData.cpp  Test.main.cpp
